# django-opensearch-toolkit

./: MANIFEST.in  Makefile  README.md  integration_test_helper.sh  pylintrc  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_linter.txt  requirements_tests.txt  run_integration_tests.sh  run_linter.sh  run_tests.sh  setup.cfg  setup.py  setup.sh
.github/: CODEOWNERS
.github/workflows/: integration-tests.yml  python-autoformat.yml  python-build.yml  python-lint.yml  python-static.yml  python-tests.yml
django_opensearch_toolkit/: apps.py
django_opensearch_toolkit/dsl/: __init__.py  aggregations.py
django_opensearch_toolkit/fields/: __init__.py  knn_vector.py
django_opensearch_toolkit/management/commands/: _opensearch_command.py  opensearch_displaymigrations.py  opensearch_runmigrations.py
django_opensearch_toolkit/migration_manager/: __init__.py  migration_log.py  migration_manager.py  opensearch_migration.py
django_opensearch_toolkit/migration_manager/tests/: test_migration_manager.py
django_opensearch_toolkit/unittest/: __init__.py  base_tests.py
sample_project/: __init__.py  manage.py
sample_project/sample_app/: __init__.py  apps.py  urls.py
sample_project/sample_app/opensearch_migrations/: __init__.py  m0001_create_merchants_index.py  m0001_migration_one.py  m0002_create_products_index.py  m0002_migration_two.py
sample_project/sample_app/opensearch_models/: __init__.py  merchant.py  product.py
sample_project/sample_project/: __init__.py  settings.py  urls.py
scripts/: integration_test_helper.sh  setup_dev.sh
(+7 files in other folders)
